# CGFAITrainingSystem

Drawio_script/: .$draw_script.drawio.dtmp  draw_script.drawio
MainEnvironment/: MainEnvironment_README.md
MainEnvironment/src/: CMakeLists.txt  testmain.cpp
MainEnvironment/src/Actuator/: Actuator.cpp  Actuator.h  RafaleActuator.cpp
MainEnvironment/src/Controller/: Controller.cpp  Controller.h  RafaleController.cpp
MainEnvironment/src/Entity/: Entity.cpp  Entity.h  Rafale.cpp
MainEnvironment/src/EntityList/: EntityList.cpp  EntityList.h
MainEnvironment/src/Info/: Info.cpp  Info.h  Types.h
MainEnvironment/src/Repo/: Repo.cpp  Repo.h
MainEnvironment/src/Sensor/: AirBorneRadar.cpp  Sensor.cpp  Sensor.h
ProjectArchitecture/: ProjectArchitecture.md
ProjectArchitecture/Drawio_script/: .$draw_script.drawio.bkp  draw_script.drawio
Test/TestDRLAlgorithm/PolicyGradient/: EnvAdapter.py  Main.py  Model.py  PolicyGradient.py  RunData.csv  TrainManager.py  Utilise.py
Test/TestDRLAlgorithm/PolicyGradient/CheckPoints/: PolicyNet_2000rwith_weightdecay.pt  PolicyNet_5000rwith_weightdecay.pt
Test/TestDRLAlgorithm/PolicyGradient/Parameters/: PolicyNet.pt
Test/TestLib/: CMakeLists.txt
Test/TestLib/Headers/: add.h
Test/TestLib/Src/: add.cpp  minus.cpp
Test/TestMain/: CMakeLists.txt  main.cpp
Test/TestMain/Lib/: minus.h
