project(Test)

add_executable(Test

Actuator/Actuator.cpp
Actuator/RafaleActuator.cpp

Controller/Controller.cpp
Controller/RafaleController.cpp

Entity/Entity.cpp
Entity/Rafale.cpp

EntityList/EntityList.cpp

Info/Info.cpp

Sensor/Sensor.cpp
Sensor/AirBorneRadar.cpp

Repo/Repo.cpp

testmain.cpp)